atualização do site

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<title>Nome Empresa</title>
+	<title>Control V</title>
 	<!--METAS-->
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--LINKS-->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
@@ -80,5 +81,33 @@
 		</div><!--MENU PAGES-->			
 	</div><!--MENU TOPO-->
 </header>
+<!--SLIDE-->
+<div class="banner">
+	<div class="slider">
+		<div class="slide slide1">
+			<!--<div class="caption">
+				<h2>Descrição 1</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat ac magna et pulvinar. Praesent quis malesuada dui. Quisque imperdiet feugiat aliquet.</p>
+			</div>-->
+		</div>	
+	</div><!--SLIDER-->		
+</div><!--BANNER-->
+<div class="servicos">	
+	<p>Olá!</p>
+</div><!--SERVICOS-->
+<!-- TAWK.TO-->
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5b9427c1afc2c34e96e858aa/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
