--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<!--LINKS-->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+	<!-- FAV ICON-->
+	<link rel="icon" href="images/logo.png" sizes="16x16">
 </head>
 <body>
 	<header id="header">
@@ -64,7 +66,7 @@
 					<a title="Início" href="#" class="home">Início</a>
 				</li>
 				<li id="jobs" class="jobs">
-					<a title="Serviços" href="#">Serviços</a>
+					<a title="Serviços" href="#servicos">Serviços</a>
 				</li>
 				<li id="shop" class="shop home">
 					<a title="Loja" href="#">
@@ -92,10 +94,13 @@
 		</div>	
 	</div><!--SLIDER-->		
 </div><!--BANNER-->
-<div class="servicos">	
-	<p>Olá!</p>
+<div id="servicos" class="servicos">
+	<div class="servicos-titulo">
+		<h1>Nossos Serviços</h1>
+	</div>
+	<!-- https://www.youtube.com/watch?v=EIvizoMrWvY
+	https://www.louistiti.fr/demo/Concept-Design/Carte-Article-UI/-->
 </div><!--SERVICOS-->
-<!-- TAWK.TO-->
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
