--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 			<input type="checkbox" id="check">
 			<label class="label-toggle" for="check"></label>
 			<span></span>
-		</div><!--MOBILE MENU -->
+		</div>
+		<!--MOBILE MENU -->
 		<!-- MENU SOCIAL -->			
 		<div class="menu-social">
 			<ul class="media-pages">
@@ -69,20 +70,42 @@
 					<a title="Serviços" href="#servicos">Serviços</a>
 				</li>
 				<li id="shop" class="shop home">
-					<a title="Loja" href="#">
+					<a title="Loja" href="#loja">
 						<i class="fas fa-tags"></i>
 					Loja</a>
 				</li>
 				<li id="company" class="company">
-					<a title="A Empresa" href="#">A Empresa</a>
+					<a title="A Empresa" href="#a-empresa">A Empresa</a>
 				</li>
 				<li id="contact" class="contact">
-					<a title="Contato" href="#">Contato</a>
+					<a title="Contato" href="#contato">Contato</a>
 				</li>										
 			</ul>
 		</div><!--MENU PAGES-->			
 	</div><!--MENU TOPO-->
 </header>
+<!-- MOBILE MENU -->
+<div class="menu-mobile" id="menu-mobile">
+	<ul class="drop-menu">
+		<li class="inicio">
+			<a href="#">Início</a>
+		</li>
+		<li class="services1">
+			<a href="#">Serviços</a>
+		</li>
+		<li class="loja">
+			<a title="Loja" href="#">
+				<i class="fas fa-tags"></i>
+			Loja</a>
+		</li>
+		<li class="empresa">
+			<a href="#">A Empresa</a>
+		</li>
+		<li class="contato">
+			<a href="#">Contato</a>
+		</li>
+	</ul>
+</div><!-- MOBILE MENU -->
 <!--SLIDE-->
 <div class="banner">
 	<div class="slider">
@@ -99,20 +122,35 @@
 		<h1>Nossos Serviços</h1>
 	</div>
 	<!-- https://www.youtube.com/watch?v=EIvizoMrWvY
-	https://www.louistiti.fr/demo/Concept-Design/Carte-Article-UI/-->
+		https://www.louistiti.fr/demo/Concept-Design/Carte-Article-UI/-->
 </div><!--SERVICOS-->
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5b9427c1afc2c34e96e858aa/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+<div id="loja" class="loja">
+	<div class="loja-titulo">
+		<h1>Compre online</h1>
+	</div>
+</div><!--LOJA-->
+<div id="a-empresa" class="a-empresa">
+	<div class="a-empresa-titulo">
+		<h1>Nossa história</h1>
+	</div>
+</div><!--CONTATO-->
+<div id="contato" class="contato">
+	<div class="contato-titulo">
+		<h1>Contato</h1>
+	</div>
+</div><!--CONTATO-->
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+		(function(){
+			var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+			s1.async=true;
+			s1.src='https://embed.tawk.to/5b9427c1afc2c34e96e858aa/default';
+			s1.charset='UTF-8';
+			s1.setAttribute('crossorigin','*');
+			s0.parentNode.insertBefore(s1,s0);
+		})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
 </html>
